0.14 - ...

0.13 - Nov 6 2023
* Added OpenBSD `pledge()`
* Moved definitions to be compatible with libbsd
* Enabled pledge for most programs
* Fixed segfault in getopt

0.12 - Nov 1 2023
* Fixed numerous installation bugs
* Removed fts, cdefs and logwtmp from libcobalt
* Various small musl-to-glibc adaptions for libcobalt
* Added strlcpy, strlcat and fgetln to libcobalt
* GNUmakefile links with the local libcobalt directory
* Removed OpenBSD Make, build system replaced by GNU Make
* Removed m4, awk, getent, getconf and env
* Improved verbose `rm` text
* Move <sys/tree.h> header to <tree.h>
* Added pkg-config files
* libcobalt is now a drop-in replacement for libbsd and libmd
* Fixed `unicode` locale

0.11 - Sep 17 2023
* Removed orphaned binary
* Fixed mk file install location

0.10 - Sep 14 2023
* Removed `news`
* `unicode` and `freq` rewritten without Plan9 libraries
* Reworked `unicode` and `freq` man pages
* Removed all remaining plan9 code
* Removed dead source file from `ls` and fixed symlink reading
* Changed GNUmakefile references of libopenbsd to libcobalt
* Removed forced linking with libcobalt in mk files, which was causing
circular and/or unneccessary linkage
* `doas` is now correctly installed as setuid
* Removed support for static building from mk files
* Libraries built with mk files now always have a symlink without the soname
* Disabled mk files from checking for the crt
* Combined fortunes2 and the offensive variant into the main fortunes lists
* Added additional fortunes
* Added `wisdom` and `shsecret` programs
* `cp` no longer errors when `chmod` fails
* Build fixes

0.9 - Sep 9 2023
* Rename libopenbsd to libcobalt
* Set `cp -r` functionality identical to `cp -R`, allowing symlinks and
special files to be copied properly using more conventional syntax
* Disabled some useless or broken functionality in libcobalt
* Fixed memory corruption in siphash.c
* Removed srandom_deterministic