@@ -1,5 +1,7 @@
 #pragma once
 
+#include <sys/cdefs.h>
+
 #ifndef __dead
 #define __dead
 #endif
