@@ -1,4 +1,6 @@
 #pragma once
 
+#include <sys/signal.h>
+
 #define SIGINFO 29
 
