@@ -1,5 +1,7 @@
 #pragma once
 
+#include <unistd.h>
+
 #include <sys/stat.h>
 
 #define S_ISTXT S_ISVTX
